@@ -40,9 +40,12 @@ static void pgNoticeProcessor(void *arg, const char *message)
 
 
 pgConn::pgConn(const wxString& server, const wxString& database, const wxString& username, const wxString& password, int port, int sslmode)
+: conv(wxConvLibc)
 {
     wxLogInfo(wxT("Creating pgConn object"));
     wxString msg, hostip;
+
+    conv = wxConvLibc;
 
     // Check the hostname/ipaddress
     struct hostent *host;
@@ -134,20 +137,33 @@ pgConn::pgConn(const wxString& server, const wxString& database, const wxString&
 
         PQsetNoticeProcessor(conn, pgNoticeProcessor, this);
 
+        pgSet *set=ExecuteSet(
+            wxT("SELECT pg_encoding_to_char(encoding) AS encoding, datlastsysoid\n")
+            wxT("  FROM pg_database WHERE datname=") + qtString(database));
+        if (set)
+        {
+            lastSystemOID = set->GetLong(wxT("datlastsysoid"));
+
 #if wxUSE_UNICODE
 
-        wxLogInfo(wxT("Setting client_encoding to 'UNICODE'"));
-        if (PQsetClientEncoding(conn, "UNICODE"))
-            wxLogError(wxT("%s"), wxString(PQerrorMessage(conn), wxConvUTF8).c_str());
-
+            if (set->GetVal(wxT("encoding")) != wxT("SQL_ASCII"))
+            {
+                wxLogInfo(wxT("Setting client_encoding to 'UNICODE'"));
+                if (PQsetClientEncoding(conn, "UNICODE"))
+                    wxLogError(wxT("%s"), wxString(PQerrorMessage(conn), conv).c_str());
+                else
+                    conv = wxConvUTF8;
+            }
 #else
 
-        wxLogInfo(wxT("Setting client_encoding to 'SQL_ASCII'"));
-        if (PQsetClientEncoding(conn, "SQL_ASCII"))
-            wxLogError(wxT("%s"), PQerrorMessage(conn));
+            wxLogInfo(wxT("Setting client_encoding to 'SQL_ASCII'"));
+            if (PQsetClientEncoding(conn, "SQL_ASCII"))
+                wxLogError(wxT("%s"), PQerrorMessage(conn));
 
 #endif
-        lastSystemOID = StrToLong(ExecuteScalar(wxT("SELECT datlastsysoid FROM pg_database LIMIT 1;")));
+            
+            delete set;
+        }
     }
 }
 
@@ -183,7 +199,7 @@ void pgConn::RegisterNoticeProcessor(PQnoticeProcessor proc, void *arg)
 
 void pgConn::Notice(const char *msg)
 {
-    wxString str(msg, wxConvUTF8);
+    wxString str(msg, conv);
     wxLogNotice(wxT("%s"), str.c_str());
 
     if (noticeArg && noticeProc)
@@ -201,14 +217,14 @@ bool pgConn::ExecuteVoid(const wxString& sql)
     PGresult *qryRes;
 
     wxLogSql(wxT("Void query (%s:%d): %s"), this->GetHost().c_str(), this->GetPort(), sql.c_str());
-    qryRes = PQexec(conn, sql.mb_str(wxConvUTF8));
+    qryRes = PQexec(conn, sql.mb_str(conv));
     int res = PQresultStatus(qryRes);
 
     // Check for errors
     if (res != PGRES_TUPLES_OK &&
         res != PGRES_COMMAND_OK)
     {
-        wxLogError(wxT("%s"), wxString(PQerrorMessage(conn), wxConvUTF8).c_str());
+        wxLogError(wxT("%s"), wxString(PQerrorMessage(conn), conv).c_str());
     }
 
     // Cleanup & exit
@@ -233,12 +249,12 @@ wxString pgConn::ExecuteScalar(const wxString& sql)
     // Execute the query and get the status.
     PGresult *qryRes;
     wxLogSql(wxT("Scalar query (%s:%d): %s"), this->GetHost().c_str(), this->GetPort(), sql.c_str());
-    qryRes = PQexec(conn, sql.mb_str(wxConvUTF8));
+    qryRes = PQexec(conn, sql.mb_str(conv));
         
     // Check for errors
     if (PQresultStatus(qryRes) != PGRES_TUPLES_OK)
     {
-        wxLogError(wxT("%s"), wxString(PQerrorMessage(conn), wxConvUTF8).c_str());
+        wxLogError(wxT("%s"), wxString(PQerrorMessage(conn), conv).c_str());
         PQclear(qryRes);
         return wxEmptyString;
     }
@@ -253,7 +269,7 @@ wxString pgConn::ExecuteScalar(const wxString& sql)
 	
 	// Retrieve the query result and return it.
     wxString result;
-    result=wxString(PQgetvalue(qryRes, 0, 0), wxConvUTF8);
+    result=wxString(PQgetvalue(qryRes, 0, 0), conv);
 
     wxLogSql(wxT("Query result: %s"), result.c_str());
 
@@ -267,7 +283,7 @@ pgSet *pgConn::ExecuteSet(const wxString& sql)
     // Execute the query and get the status.
     PGresult *qryRes;
     wxLogSql(wxT("Set query (%s:%d): %s"), this->GetHost().c_str(), this->GetPort(), sql.c_str());
-    qryRes = PQexec(conn, sql.mb_str(wxConvUTF8));
+    qryRes = PQexec(conn, sql.mb_str(conv));
 
     int status= PQresultStatus(qryRes);
 
@@ -283,7 +299,7 @@ pgSet *pgConn::ExecuteSet(const wxString& sql)
     }
     else
     {
-        wxLogError(wxT("%s"), wxString(PQerrorMessage(conn), wxConvUTF8).c_str());
+        wxLogError(wxT("%s"), wxString(PQerrorMessage(conn), conv).c_str());
         PQclear(qryRes);
     }
 
