@@ -1,6 +1,7 @@
 <ul>
 	<li>V1.0.0
   	<ul>
+                <li>2003-10-01 AP - client encoding SQL_ASCII for server SQL_ASCII
 		<li>2003-10-01 DP - Correctly quote table names when creating indexes.
 		<li>2003-09-30 HS - Display new triggers correctly in the treeview.
 		<li>2003-09-30 DP - Allow creation of triggers with functions in schemas not in the search path.
